--- a/examples/chef/esp32/main/CMakeLists.txt
+++ b/examples/chef/esp32/main/CMakeLists.txt
@@ -16,23 +16,9 @@
 #
 # (Uses default behaviour of compiling all source files in directory, adding 'include' to include path.)
 
-get_filename_component(CHIP_ROOT ${CMAKE_CURRENT_LIST_DIR}/../../../.. REALPATH)
+get_filename_component(CHIP_ROOT ../third_party/connectedhomeip REALPATH)
 get_filename_component(CHEF ${CMAKE_CURRENT_SOURCE_DIR}/../../ REALPATH)
 get_filename_component(GEN_DIR ${CHEF}/out/${SAMPLE_NAME}/zap-generated REALPATH)
-
-if (NOT CMAKE_BUILD_EARLY_EXPANSION)
-  include("${CHIP_ROOT}/build/chip/chip_codegen.cmake")
-
-  # TODO: how do I know what matter file to use here???
-  chip_codegen(app-codegen
-    INPUT     "${CHEF}/devices/${SAMPLE_NAME}.matter"
-    GENERATOR "cpp-app"
-    OUTPUTS
-          "app/PluginApplicationCallbacks.h"
-    OUTPUT_PATH   APP_GEN_DIR
-    OUTPUT_FILES  APP_GEN_FILES
-  )
-endif()
 
 # include(${CMAKE_CURRENT_LIST_DIR}/../../project_include.cmake)
 
@@ -48,7 +34,6 @@ set(PRIV_INCLUDE_DIRS_LIST
                       "${CMAKE_SOURCE_DIR}/third_party/connectedhomeip/third_party/nlio/repo/include"
                       "${CMAKE_SOURCE_DIR}/../"
                       "${GEN_DIR}/../"
-                      "${APP_GEN_DIR}"
                       "${CMAKE_SOURCE_DIR}/main/include/"
 )
 
@@ -121,7 +106,9 @@ idf_component_register(PRIV_INCLUDE_DIRS
                       "${PRIV_INCLUDE_DIRS_LIST}"
                       PRIV_REQUIRES chip nvs_flash bt console esp32_mbedtls QRCode tft screen-framework spidriver
                       SRC_DIRS ${SRC_DIRS_LIST})
-add_dependencies(${COMPONENT_LIB} app-codegen)
+
+include("${CHIP_ROOT}/build/chip/esp32/esp32_codegen.cmake")
+chip_app_component_codegen("${CHEF}/devices/${SAMPLE_NAME}.matter")
 
 set_property(TARGET ${COMPONENT_LIB} PROPERTY CXX_STANDARD 17)
 target_compile_options(${COMPONENT_LIB} PRIVATE "-DCHIP_HAVE_CONFIG_H")
@@ -130,8 +117,6 @@ target_compile_options(${COMPONENT_LIB} PUBLIC
 )
 
 if (CONFIG_ENABLE_PW_RPC)
-
-get_filename_component(CHIP_ROOT ../third_party/connectedhomeip REALPATH)
 
 set(PIGWEED_ROOT "${CHIP_ROOT}/third_party/pigweed/repo")
 include(${PIGWEED_ROOT}/pw_build/pigweed.cmake)
