--- a/src/lib/address_resolve/BUILD.gn
+++ b/src/lib/address_resolve/BUILD.gn
@@ -71,3 +71,18 @@ executable("address-resolve-tool") {
 
   output_dir = root_out_dir
 }
+
+executable("leak-checker") {
+  sources = [ "leak_checker.cpp" ]
+
+  cflags = [ "-Wconversion" ]
+
+  public_deps = [
+    ":address_resolve",
+    "${chip_root}/examples/common/tracing:commandline",
+    "${chip_root}/src/lib/support",
+    "${chip_root}/src/platform/logging:stdio",
+  ]
+
+  output_dir = root_out_dir
+}
