--- a/scripts/py_matter_idl/files.gni
+++ b/scripts/py_matter_idl/files.gni
@@ -39,6 +39,7 @@ matter_idl_generator_sources = [
   "${chip_root}/scripts/py_matter_idl/matter_idl/test_generators.py",
   "${chip_root}/scripts/py_matter_idl/matter_idl/test_matter_idl_parser.py",
   "${chip_root}/scripts/py_matter_idl/matter_idl/test_xml_parser.py",
+  "${chip_root}/scripts/py_matter_idl/matter_idl/versioning/__init__.py",
   "${chip_root}/scripts/py_matter_idl/matter_idl/xml_parser.py",
   "${chip_root}/scripts/py_matter_idl/matter_idl/zapxml/__init__.py",
   "${chip_root}/scripts/py_matter_idl/matter_idl/zapxml/handlers/__init__.py",
